# OxiCloud

./: .dockerignore  .envrc  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  build.rs  devenv.nix  entrypoint.sh  example.env  flake.nix  justfile
.github/workflows/: ci.yml  docker-publish.yml  load-nightly.yml  load-smoke.yml
benches/: ROUND11.md  ROUND14.md  ROUND18.md  ROUND21.md  ROUND26.md  ROUND28.md  ROUND3.md  ROUND4.md  ROUND5.md  ROUND6.md  ROUND7.md  ROUND8.md  ROUND9.md  VIDEO-THUMB.md
docs/: DESIGN-SYSTEM.md  TOKENS.md  delta-upload-protocol.md
docs/.vitepress/: config.mts
docs/architecture/: auth-model.md  magic-link-auth.md  rebac-authorization.md  share-integration.md
docs/config/: authentication.md  env.md
docs/guide/: caldav-carddav.md  dav-client-setup.md  drives.md  search.md  sharing.md  trash.md  webdav.md
docs/plan/: BASELINE_TESTS_NC_WEBDAV.md  External-User.md  Photos-People-Places.md  benchmake-and-performance-tracking.md  drive.md  plan-ReBAC-Permissions-Grants-Cascading.md
examples/: bench_auth_herd.rs  bench_azure_stream.rs  bench_blob_cache.rs  bench_caldav_parse.rs  bench_caldav_stream.rs  bench_capabilities_static.rs  bench_carddav_report.rs  bench_carddav_stream.rs  bench_drive_is_empty.rs  bench_drive_selector.rs  bench_dto_map.rs  bench_faces_bound.rs  bench_favorites_authz.rs  bench_folder_keyset.rs  bench_folder_uuid_decode.rs  bench_hex_ids.rs  bench_listing_keyset.rs  bench_micro_allocs.rs  bench_n1_hydration.rs  bench_nc_enrich_join.rs  bench_nc_session.rs  bench_photos_timeline.rs  bench_propfind_xml.rs  bench_range_seek_authz.rs  bench_resource_row_map.rs  bench_round10_micro.rs  bench_round10_queries.rs  bench_round11_micro.rs  bench_round11_queries.rs  bench_round14_micro.rs  bench_round14_queries.rs  bench_round18_micro.rs  bench_round21_micro.rs  bench_round25_micro.rs  bench_round25_queries.rs  bench_round26_diskio.rs  bench_round26_hasher.rs  bench_round26_micro.rs  bench_row_path.rs  bench_s3_put.rs  (+7 more)
frontend/: .gitignore  .prettierignore  .stylelintignore  .stylelintrc.json  eslint.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.html  hooks.client.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/static/: manifest.webmanifest
frontend/static/locales/: ar.json  de.json  en.json  es.json  fa.json  fr.json  hi.json  it.json  ja.json  ko.json  nl.json  pl.json  pt.json  ru.json  zh-TW.json  zh.json
frontend/static/workers/: deltaWorker.js
migrations/: 20260612000001_share_grant_reverse_cascade.sql  20260628000000_delta_upload_gin_index.sql  20260730000000_role_grants.sql  20260801000000_role_grants_enum.sql  20260801000001_role_grants_cascade_triggers.sql  20260801000002_drop_access_grants.sql  20260801000003_places_geo_index.sql  20260801000004_faces.sql  20260802000000_blob_gc_grace.sql  20260830000000_cascade_path_trigger_column_list_fix.sql  20260904000000_drop_files_folders_user_id.sql  20260910000000_role_grants_playlist.sql  20260910000001_backfill_playlist_role_grants.sql  20260911000000_folder_sync_changes.sql  20260911000001_calendar_sync_changes.sql  20260911000002_contact_sync_changes.sql  20260913000001_calendar_events_recurrence_id.sql  20260918000000_listing_lower_name_indexes.sql
scripts/: check-brand-drift.mjs  check-dead-tokens.mjs  check-locales.mjs  gen-token-docs.mjs
src/: AGENTS.md  integration_test_support.rs  main.rs
src/application/adapters/: caldav_adapter.rs  caldav_adapter_test.rs  carddav_adapter.rs  carddav_adapter_test.rs  mod.rs  param_encoding.rs  sync_collection_xml.rs  webdav_adapter.rs
src/application/dtos/: calendar_dto.rs  display_helpers.rs  favorites_dto.rs  file_dto.rs  folder_dto.rs  geo_dto.rs  grant_dto.rs  mod.rs  people_dto.rs  recent_dto.rs  search_dto.rs  trash_dto.rs  user_dto.rs
src/application/ports/: auth_ports.rs  authorization_ports.rs  calendar_ports.rs  carddav_ports.rs  change_log_port.rs  dedup_ports.rs  external_mount_ports.rs  face_ports.rs  favorites_ports.rs  file_ports.rs  folder_ports.rs  inbound.rs  mod.rs  music_ports.rs  storage_ports.rs  (+1 more)
src/common/: config.rs  di.rs  fmt.rs  mod.rs  stubs.rs
src/domain/: errors.rs
src/infrastructure/: db.rs
src/interfaces/: errors.rs  upload_ingest.rs
static/: index.html  locales  sw.js
static/basemaps/: .gitignore  README.md
tests/api/: caldav_calendar_query.hurl  caldav_recurring.hurl  calendar.hurl  calendar_sync_collection.hurl  carddav_vcard_properties.hurl  contact_sync_collection.hurl  contacts.hurl  cross_drive_copy.hurl  cross_drive_move.hurl  dav_error_mapping.hurl  dedup_admin_gate.hurl  dedup_blob_cleanup.hurl  default_caldav_carddav.hurl  drive_quota.hurl  drive_read_only.hurl  drives_membership.hurl  external_users.hurl  favorites.hurl  files-folders.hurl  grant_cleanup.hurl  grants.hurl  grants_nested_groups.hurl  nc_admin_views_other_user.hurl  nc_auth_failures.hurl  nc_avatar_preview.hurl  nc_login_flow_v2.hurl  nc_login_flow_v2_drive_picker.hurl  nc_ocs_user_info.hurl  nc_second_user_setup.hurl  nc_status_capabilities.hurl  nc_webdav_patch.hurl  nc_webdav_patch_consistency.hurl  nc_webdav_sync_collection.hurl  permissions.hurl  playlists.hurl  registration.hurl  role_grants.hurl  run.sh  search_basic.hurl  storage_cleanup_check.sh  (+11 more)
tests/caldav/: conftest.py  run-pycaldav.sh  test.env  test_carddav.py  test_ical_coverage.py  test_recurring.py  test_report.py
tests/common/: init-test-schema.sh  server.env  spawn-db.sh  wipe-storage.sh
tests/load/: README.md  bake-baseline.mjs  compare.mjs  merge-summaries.mjs  run.sh  smoke.sh  test.env
tests/oidc/: oidc.hurl
tests/webdav/: run.sh  test_dedup_webdav_multichunk.sh  test_dedup_webdav_ref_count.sh  test_native_webdav_lifecycle.sh  test_nc_chunked_upload_assembly_blake3.sh  test_nc_cross_user_isolation.sh  test_nc_favorites_and_report.sh  test_nc_get_head_range.sh  test_nc_move_copy_delete_trash.sh  test_nc_propfind_baseline.sh  test_nc_put_mkcol_blake3.sh  test_thumbnail_update.sh
tools/: audit-grants-bundle-shape.sql  d-prep-real-db-smoke.sh
(+316 files in other folders)
